# prometheus-sumo

./: .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  README  README.md  Rakefile  bootstrap
config/: CMakeLists.txt  account.yml  gems.yml  institution.yml  packages_debian.yml  packages_debian.yml.in  packages_osx.yml  packages_redhat.yml  repositories.yml.in  ruby_gems.yml  source.yml  trusted_proxies.yml
config/cmake/: ConfigurationSummary.cmake  DetectOS.cmake  FindClamAV.cmake  FindFerret.cmake  FindGem.cmake  FindIconv.cmake  FindRDoc.cmake  FindRails.cmake  FindRubyGems.cmake  FindTinyXML.cmake  FindUnixCommands.cmake  FindVirtualBox.cmake  FindXercesc.cmake  FindYAZ.cmake  FindYAZPP.cmake  FindYaml.cmake  template_ExternalProject.txt  template_FindPackage.cmake
data/: CMakeLists.txt  source.yml.in
data/repositories/: CMakeLists.txt
data/tests/: CMakeLists.txt  idppo.txt  yaml_AssociativeArray.yml  yaml_List.yml  yaml_ScalarsToSequences.yml  yaml_list.yml
data/vm/: CMakeLists.txt
documentation/: Bookmarks.md  CMakeLists.txt  Capistrano.md  Capistrano.rdoc  ConfigurationSummary.doxy.in  Database.md  Database.rdoc  Deployment.md  Deployment.rdoc  Development.md  Development.rdoc  Doxyfile.in  FAQ.md  Ferret.md  HAN.md  Infrastructure.md  Mainpage.doxy  MySQL.md  PostgreSQL.md  Prometheus.md  Prometheus.rdoc  Rails.md  Redmine.md  References.md  References.rdoc  SearchIndex.md  Software_Packages.doxy  Testing.md  Testing.rdoc  XML.md  YAML.md  doxygen.config.in  stylesheet.css  yardopts.doc.in  yardopts.in  yardopts.sources.in
documentation/Infrastructure/: Domains.md  Servers.md  VirtualMachines.md  Wiki.md
documentation/Software_Design/: Boxes.doxy  Sidebar.doxy  Software_Design.doxy
documentation/Software_Packages/: Capistrano.md  MySQL.doxy  Rails.doxy  Redmine.doxy  Subversion.md  YAML.doxy  kleio.doxy  prometheus-sumo.md
documentation/Software_Packages/pandora/: Coding_Guidelines.doxy  Deployment.doxy  Install_Development.doxy  Pandora_Overview.doxy  Search_Engine.doxy  database_import.md  pandora.doxy
documentation/Support/: Bookmarks.md  HAN.md  Subversion.md  XML.md
documentation/examples/: monster.yaml  monsters.yaml  parse-monsters.cc  vm_base_install.sh
documentation/images/: Association_Box.graffle  Association_Presentation.graffle
documentation/infrastructure/: Bookmarks.md  Infrastructure.md  Repositories.md  VirtualMachines.md
documentation/manual/: 0_00_Introduction.doxy  1_00_ImageArchive.doxy  2_00_SoftwareStack.doxy  3_00_Infrastructure.doxy  3_00_pandora.doxy  4_00_pandora.doxy  4_01_Database.doxy  4_02_Indexing.doxy  5_00_Homepage.doxy  6_00_Homepage.doxy  A_00_References.doxy  A_01_FAQ.doxy  B_02_MySQL.doxy  B_05_Ferret.doxy  B_06_Capistrano.doxy  B_07_Redmine.doxy  CMakeLists.txt  Doxyfile.in  README  doxygen.config.in  doxygen_html_footer.html.in  doxygen_html_header.html.in  doxygen_html_stylesheet.css.in  manual_mainpage.doxy  manual_pandora.doxy  manual_prometheus.doxy  refman-chap00-intro.doxy  refman-chap01-image_archive.doxy  refman-chap02-software.doxy  refman-chap03-pandora.doxy  refman-chap04-guidelines.doxy  refman-extra-Capistrano.doxy  refman-extra-Ferret.doxy  refman-extra-PostgreSQL.doxy  refman-extra-Rails.doxy  refman-extra-YAML.doxy  stylesheet_custom.css.in
documentation/pages/: Apache_logs.md  Benchmarking.md  Bookmarks.md  Browser.md  COUNTER.md  Coding_Guidelines.doxy  Coding_Guidelines.md  DILPS.md  FAQ.md  Homepage.md  Homepage_build.md  Homepage_editing.md  HyperImage.md  Image_archive.md  Infrastructure.md  Issue_Tracker.md  JekyllCommander.md  MySQL.md  Nagios.md  Publications.md  RSpec.md  Redmine.doxy  Related_projects.md  SRU.md  Servers.md  Software_Packages.doxy  VBoxManage.md  Virtual_machines.md  XML.md  YAML.doxy  YAML.md  git.md  kleio.doxy  logwatch.md  marc.md  pandora.md  prometheus-sumo.md  sed.md  stream_editor.md  svn_commands.md  (+4 more)
documentation/pages/Benchmarking/: pdf2jpg.md
documentation/pages/Databases/: Arachne.md  DILPS.md  PostgreSQL.md  RijksmuseumAmsterdam.md
documentation/pandora/: Coding_Guidelines.doxy  Deployment.doxy  Install_Development.doxy  Install_Production.doxy  Overview.doxy  Pandora_Overview.doxy  Search_Engine.doxy
documentation/support/: FAQ.md  References.md  VirtualMachines.md
environment/: CMakeLists.txt  InstallPackagesDebian.cmake  InstallPackagesRedhat.cmake  InstallPackagesUbuntu.cmake  InstallRubyGems.cmake  PackagesDebian.cmake  PackagesUbuntu.cmake  RubyGems.cmake
environment/debian/: CMakeLists.txt
environment/fedora/: CMakeLists.txt
environment/osx/: CMakeLists.txt
environment/redhat/: CMakeLists.txt
environment/ubuntu/: CMakeLists.txt
sources/: CMakeLists.txt  prom_config.h.in
sources/apache/: CMakeLists.txt
sources/apps/: CMakeLists.txt  install_packages.cc  promManagePackages.cc  prom_dependencies.cc  prom_dependencies.h  scan_csv_stats.cc
sources/jekyll/: CMakeLists.txt
sources/lib/: Account.cc  CMakeLists.txt  CharacterMnemonic.h  Common.cc  Common.h  ConfigFileInstitution.h  Image.cc  Image.h  Institution.cc  Institution.h  Presentation.h  SourceDump.cc  SourceDump.h  SourceIdList.h  StatisticsHBZ.cc  StatisticsHBZ.h  StatisticsReader.cc  StatisticsReader.h  StatisticsReaderHBZ.cc  StatisticsReaderHBZ.h
sources/ruby/: CMakeLists.txt
sources/scripts/: pre_commit_check.sh
sources/tests/: CMakeLists.txt  TestBoostTokenizerCSV.cc  TestBoxes.cc  TestCalculation.rb  TestCommon.cc  TestEXIF.rb  TestImage.cc  TestSourceDump.cc  TestSourcesBeeskow.cc  TestSourcesKassel.cc  TestSourcesRobertinum.cc  TestSourcesTheolEik.cc  TestXML.cc  TestXMLBoost.cc  TestXMLTree.c  TestYamlReading.cc  tEmitting.cc  tParseFixtures.cc  testApacheLogs.cc  testCommon.cc  testConfigGems.cc  testConfigInstitution.cc  testConfigRubyGems.cc  testConfigTrustedProxies.cc  testImage.cc  testKWSys.cc  testRubyGems.cc  testSourcesBeeskow.cc  testSourcesPPO.cc  testXML.cc  testXMLTree.c  testYAML.cc  testYAZPP.cc  testYamlReading.cc
sources/xml/: CMakeLists.txt
sources/yaml/: CMakeLists.txt  roles.yml  tEmitting.cc  tParseFixtures.cc
(+187 files in other folders)
